@@ -1,3 +1,10 @@
+** v4.51, 12.07.2020**
+* Prevent an error which cause that the Export Profile didnt work.
+* My chat seperators now take account the the Chat Panel Backdrop Settings.
+* Simplify my Tooltip Icons.
+* UNDER INVESTIGATION: Added back Item Level Links. See in game Changelog for infos.
+
+
 ** v4.50, 09.07.2020**
 * Try to prevent an error with my ChatButton.
 * Add an additional check if you enable the rectangle minimap.
